--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/style.css">
+
+    <!-- Fontes usadas -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Solaria</title>
 </head>
 
@@ -43,10 +48,176 @@
     <main>
         <section class="hero">
             <div class="hero__grid">
-                <div class="hero__txt"></div>
-                <div class="hero__img"></div>
+                <div class="hero__txt">
+                    <div class="hero__det">
+                        <p>Especialistas em sites</p>
+                    </div>
+                    <div class="hero__tit">
+                        <h1>Mais do que um site. Sua empresa merece <span>excelência</span></h1>
+                    </div>
+                    <div class="hero__vant">
+                        <ul>
+                            <li>
+                                <img src="./assets/img/icon/check.svg" alt="Ícone de vantagem">
+                                <p>Sites que funcionam no celular e computador</p>
+                            </li>
+                            <li>
+                                <img src="./assets/img/icon/check.svg" alt="Ícone de vantagem">
+                                <p>Sites que funcionam no celular e computador</p>
+                            </li>
+                            <li>
+                                <img src="./assets/img/icon/check.svg" alt="Ícone de vantagem">
+                                <p>Sites que funcionam no celular e computador</p>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="hero__btn">
+                        <a class="btn__pri" href="">veja alguns projetos</a>
+                        <a class="btn__sec" href="">faça um orçamento</a>
+                    </div>
+                </div>
+                <div class="hero__img">
+                    <img src="./assets/img/icon/img.svg" alt="">
+                </div>
             </div>
         </section>
+
+        <article class="meto">
+            <h2 class="meto__tit">metodologia</h2>
+            <div>
+                <ul class="meto__grid">
+                    <li>
+                        <p class="meto__num">01</p>
+                        <div class="meto__icon borda"><img src="./assets/img/icon/meto1.svg" alt="Ícone de"></div>
+                        <div class="meto__txt">
+                            <h3>Briefing</h3>
+                            <p>Reunião para entender quais os problemas do cliente, com base nessas informações, começar a elaborar soluções para resolver o problema.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="meto__num">02</p>
+                        <div class="meto__icon borda"><img src="./assets/img/icon/meto2.svg" alt="Ícone de"></div>
+                        <div class="meto__txt">
+                            <h3>Planejamento</h3>
+                            <p>Definir plataforma de trabalho. Wireframe de baixa fidelidade. Estruturar os primeiros layouts do projeto. Quando o cliente aprovar seguimos.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="meto__num">03</p>
+                        <div class="meto__icon borda"><img src="./assets/img/icon/meto3.svg" alt="Ícone de"></div>
+                        <div class="meto__txt">
+                            <h3>Criação</h3>
+                            <p>Após o OK, é hora de começar a codificar o layout produzido, dando vida ao site. Realizar polimentos finais. Correção de BUGs.</p>
+                        </div>
+                    </li>
+                    <li>
+                        <p class="meto__num">04</p>
+                        <div class="meto__icon borda"><img src="./assets/img/icon/meto4.svg" alt="Ícone de"></div>
+                        <div class="meto__txt">
+                            <h3>Lançamento</h3>
+                            <p>Tudo perfeito, é hora de lançar!Avise seu público sobre o novo site. Nosso trabalho não acaba aqui, seguimos monitorando o desempenho do site.</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </article>
+
+        <section class="step">
+            <div class="step__tit">
+                <h2>Ainda está confuso?</h2>
+                <p>sem problemas, a gente desenha (=</p>
+            </div>
+            <p>Clique nos ícones para mudar a imagem</p>
+            <div class="step_grid">
+                <div class="step__steps">
+                    <ul>
+                        <li>
+                            <div class="step__icon">
+                                <a href="#">
+                                    <img src="./assets/img/icon/bolinha.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="step__txt">
+                                <h4>Passo 1 - Briefing</h4>
+                                <p>Reunião para entender quais os problemas do cliente, com base nessas informações, começar a elaborar soluções para resolver o problema.</p>
+                                <a href="">Próximo Passo</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="step__icon">
+                                <a href="#">
+                                    <img src="./assets/img/icon/bolinha.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="step__txt">
+                                <h4>Passo 2 - Briefing</h4>
+                                <p>Reunião para entender quais os problemas do cliente, com base nessas informações, começar a elaborar soluções para resolver o problema.</p>
+                                <a href="">Próximo Passo</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="step__icon">
+                                <a href="#">
+                                    <img src="./assets/img/icon/bolinha.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="step__txt">
+                                <h4>Passo 3 - Briefing</h4>
+                                <p>Reunião para entender quais os problemas do cliente, com base nessas informações, começar a elaborar soluções para resolver o problema.</p>
+                                <a href="">Próximo Passo</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="step__icon">
+                                <a href="#">
+                                    <img src="./assets/img/icon/bolinha.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="step__txt">
+                                <h4>Passo 4 - Briefing</h4>
+                                <p>Reunião para entender quais os problemas do cliente, com base nessas informações, começar a elaborar soluções para resolver o problema.</p>
+                                <a href="">Próximo Passo</a>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="step__icon">
+                                <a href="#">
+                                    <img src="./assets/img/icon/bolinha.svg" alt="">
+                                </a>
+                            </div>
+                            <div class="step__txt">
+                                <h4>Lançamento!</h4>
+                                <p>Reunião para entender quais os problemas do cliente, com base nessas informações, começar a elaborar soluções para resolver o problema.</p>
+                                <a href="">Próximo Passo</a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+                <div class="step__img">
+                    <img src="./assets/img/fake.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <article class="num">
+            <div class="num__grid">
+                <div>
+                    <img src="./assets/img/icon/num1.svg" alt="">
+                    <p class="num__dest">+30</p>
+                    <p>clientes satisfeitos</p>
+                </div>
+                <div>
+                    <img src="./assets/img/icon/num2.svg" alt="">
+                    <p class="num__dest">+273</p>
+                    <p>linhas de código programado</p>
+                </div>
+                <div>
+                    <img src="./assets/img/icon/num3.svg" alt="">
+                    <p class="num__dest">203</p>
+                    <p>litros de café consumido</p>
+                </div>
+            </div>
+        </article>
     </main>
 
     <script src="script.js"></script>
