--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         </article>
 
         <section class="step">
-            <div class="step__tit">
+            <div class="sec__tit">
                 <h2>Ainda está confuso?</h2>
                 <p>sem problemas, a gente desenha (=</p>
             </div>
@@ -201,23 +201,64 @@
 
         <article class="num">
             <div class="num__grid">
-                <div>
+                <div class="num__item">
                     <img src="./assets/img/icon/num1.svg" alt="">
-                    <p class="num__dest">+30</p>
-                    <p>clientes satisfeitos</p>
+                    <div class="num__txt">
+                        <p class="num__dest">+30</p>
+                        <p class="num__p">clientes satisfeitos</p>
+                    </div>
                 </div>
-                <div>
+                <div class="num__item">
                     <img src="./assets/img/icon/num2.svg" alt="">
-                    <p class="num__dest">+273</p>
-                    <p>linhas de código programado</p>
+                    <div class="num__txt">
+                        <p class="num__dest">+273</p>
+                        <p class="num__p">mil linhas de código programado</p>
+                    </div>
                 </div>
-                <div>
+                <div class="num__item">
                     <img src="./assets/img/icon/num3.svg" alt="">
-                    <p class="num__dest">203</p>
-                    <p>litros de café consumido</p>
+                    <div class="num__txt">
+                        <p class="num__dest">203</p>
+                        <p class="num__p">litros de café consumido</p>
+                    </div>
                 </div>
             </div>
         </article>
+
+        <section class="port">
+            <div class="sec__tit">
+                <h2>Trabalhos Recentes</h2>
+                <p>Selecionamos alguns projetos que amamos desenvolver. Basta clicar na imagem e ver tooodo o processo, do briefing ao site no ar</p>
+            </div>
+
+            <div class="port__itens">
+                <div class="port__item1">
+                    <img src="./assets/img/fake2.png" alt="">
+                </div>
+                <div class="port__item2">
+                    <img src="./assets/img/fake2.png" alt="">
+                </div>
+                <div class="port__item3">
+                    <img src="./assets/img/fake2.png" alt="">
+                </div>
+                <div class="port__item4">
+                    <img src="./assets/img/fake2.png" alt="">
+                </div>
+                <div class="port__item5">
+                    <img src="./assets/img/fake2.png" alt="">
+                </div>
+            </div>
+        </section>
+        <section class="feed">
+            <div class="feed__grid">
+                <div class="feed__img"><img src="./assets/img/icon/avaliacao.svg" alt=""></div>
+                <div class="feed__txt">
+                    <div class="feed__tit">O que dizem sobre nós</div>
+                    <p class="feed__depo"><span>“</span> bom, show de bola. Graças a esse site minhas vendas aumentaram 100% vmuito bom, show de bola. Graças a esse site minhas vendas aumentaram 100%</p>
+                    <p class="feed__pessoa">Zézinho Almeida</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <script src="script.js"></script>
