--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
 
 <body>
     <header class="container">
-        <div class="logo"><img src="./assets/img/icon/log.svg" alt=""></div>
+        <div class="logo"><a href="#"><img src="./assets/img/icon/log.svg" alt="Logotipo Solaria"></a></div>
         <div class="header__nav">
             <nav>
                 <ul>
-                    <li>
-                        <a href="#">
+                    <li class="header1">
+                        <a href="#metodologia">
                             metodologia
                         </a>
                     </li>
-                    <li>
+                    <li class=" header2">
                         <a href="#">
                             passo a passo
                         </a>
                     </li>
-                    <li>
+                    <li class="header3">
                         <a href="#">
                             portfólio
                         </a>
                     </li>
-                    <li>
+                    <li class="header4">
                         <a href="#">
                             depoimentos
                         </a>
@@ -48,14 +48,15 @@
     <main>
         <div class="relative">
             <div class="bg__hero">
-                <svg class="svg-hero" viewBox="0 0 1920 553" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <svg class="svg-hero" viewBox="0 0 1920 531" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <g id="herosvg">
-                        <path id="bg-heroline1" opacity="0.5" d="M1955 459.605C1473.68 563.71 1207.97 598.019 768.439 459.605C531.127 384.871 338.703 391.468 -3.40939e-05 459.605" stroke="#B0B0B0" stroke-width="3" stroke-linecap="round" stroke-dasharray="3 10" />
-                        <path id="bg-heroline2" opacity="0.2" d="M-37.6821 397.764C304.336 250.822 497.887 212.653 848.374 248.574C1369.38 301.969 1606.2 229.87 1925.46 67.2181" stroke="#B0B0B0" stroke-width="3" stroke-linecap="round" stroke-dasharray="3 10" />
-                        <rect id="quad-hero2" opacity="0.5" x="866.397" y="309.19" width="92.6193" height="92.6193" rx="10" transform="rotate(-144.493 866.397 309.19)" fill="url(#paint0_linear_540_564)" />
-                        <rect id="quad-hero1" opacity="0.5" x="1677" y="149.595" width="96.0073" height="96.0073" rx="10" transform="rotate(-46.4597 1677 149.595)" fill="url(#paint1_linear_540_564)" />
-                        <circle id="bola-hero1" cx="689" cy="436" r="30" fill="url(#paint2_linear_540_564)" />
-                        <circle id="bola-hero2" cx="66.6396" cy="353.64" r="15" transform="rotate(78.7425 66.6396 353.64)" fill="url(#paint3_linear_540_564)" />
+                        <path class="bg-heroline1" id="bg-heroline1" opacity="0.5" d="M1920 451.471C1447.3 539.781 1186.34 568.885 754.682 451.471C521.619 388.077 332.639 393.673 4.29153e-05 451.471" stroke="#B0B0B0" stroke-width="3" stroke-linecap="round" stroke-dasharray="3 10" />
+                        <path class="bg-heroline2" id="bg-heroline2" opacity="0.5" d="M1941 293.462C1463.13 197.254 1199.32 165.548 762.936 293.462C527.324 362.526 336.277 356.429 8.58307e-06 293.462" stroke="#B0B0B0" stroke-opacity="0.3" stroke-width="3" stroke-linecap="round" stroke-dasharray="3 10" />
+                        <path class="bg-heroline3" id="bg-heroline3" opacity="0.2" d="M-30.2589 396.514C310.411 249.8 503.226 211.754 852.447 247.888C1371.57 301.601 1607.47 229.656 1925.46 67.2181" stroke="#B0B0B0" stroke-width="3" stroke-linecap="round" stroke-dasharray="3 10" />
+                        <rect class="quad-hero2" id="quad-hero2" opacity="0.5" x="866.397" y="309.19" width="92.6193" height="92.6193" rx="10" transform="rotate(-144.493 866.397 309.19)" fill="url(#paint0_linear_540_564)" />
+                        <rect class="quad-hero1" id="quad-hero1" opacity="0.5" x="1677" y="149.595" width="96.0073" height="96.0073" rx="10" transform="rotate(-46.4597 1677 149.595)" fill="url(#paint1_linear_540_564)" />
+                        <circle class="bola-hero1" id="bola-hero1" cx="689" cy="436" r="30" fill="url(#paint2_linear_540_564)" />
+                        <circle class="bola-hero2" id="bola-hero2" cx="66.6396" cy="353.64" r="15" transform="rotate(78.7425 66.6396 353.64)" fill="url(#paint3_linear_540_564)" />
                     </g>
                     <defs>
                         <linearGradient id="paint0_linear_540_564" x1="866.397" y1="309.19" x2="959.016" y2="401.809" gradientUnits="userSpaceOnUse">
@@ -78,7 +79,6 @@
                         </linearGradient>
                     </defs>
                 </svg>
-
             </div>
 
             <section class="hero container">
@@ -91,8 +91,11 @@
                             <h1>Mais do que um site. Sua empresa merece <span>excelência</span></h1>
                         </div>
                         <div class="hero__btn mT-5">
-                            <a class="btn__pri borda" href="">veja alguns projetos</a>
-                            <a class="btn__sec borda" href="">faça um orçamento</a>
+                            <div class="hero__cta">
+                                <a class="btn__pri borda" href="">veja alguns projetos</a>
+                            </div>
+                            <div class="hero__cta2"><a class="btn__sec borda" href="">faça um orçamento</a>
+                            </div>
                         </div>
                     </div>
                     <div class="hero__img">
@@ -102,7 +105,7 @@
             </section>
         </div>
 
-        <article class="meto">
+        <article id="metodologia" class="meto">
             <div class="meto__bg">
                 <div class="container">
                     <h2 class="meto__tit">metodologia</h2>
@@ -146,7 +149,7 @@
             </div>
         </article>
 
-        <section class="step container">
+        <section id="step" class="step container">
             <div class="sec__tit">
                 <h2>Ainda está confuso?</h2>
                 <p>sem problemas, a gente desenha (=</p>
