--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
             </div>
         </section>
 
-        <article class="num">
+        <article id="numeros" class="num">
             <div class="num__grid container">
                 <div class="num__item">
                     <img src="./assets/img/icon/num1.svg" alt="">
@@ -252,7 +252,7 @@
             </div>
         </article>
 
-        <section class="port">
+        <section id="portfolio" class="port">
             <div class="container">
                 <div class="sec__tit">
                     <h2>Trabalhos Recentes</h2>
@@ -279,7 +279,7 @@
             </div>
         </section>
 
-        <section class="feed">
+        <section id="feedback" class="feed">
             <div class="feed__grid container">
                 <div class="feed__img"><img src="./assets/img/icon/avaliacao.svg" alt=""></div>
                 <div class="feed__txt">
