--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="container">
-        <div class="logo"><a href="#"><img src="./assets/img/icon/log.svg" alt="Logotipo Solaria"></a></div>
+        <div class="logo"><a href="./entry.html"><img src="./assets/img/icon/log.svg" alt="Logotipo Solaria"></a></div>
         <div class="header__nav">
             <nav>
                 <ul>
@@ -80,7 +80,6 @@
                     </defs>
                 </svg>
             </div>
-
             <section class="hero container">
                 <div class="hero__grid p-7">
                     <div class="hero__txt">
@@ -99,7 +98,8 @@
                         </div>
                     </div>
                     <div class="hero__img">
-                        <img src="./assets/img/icon/img.svg" alt="">
+
+
                     </div>
                 </div>
             </section>
