--- a/index.html
+++ b/index.html
@@ -173,7 +173,127 @@
             </div>
         </article>
 
-        <section id="step" class="step container">
+        <section id="diferenciais" class="diferenciais container">
+            <h4>Diferenciais</h4>
+            <div id="diferenciais__responsivo" class="diferenciais__item">
+                <div class="diferenciais__txt">
+                    <span>Responsividade</span>
+                    <h5>Sites que se adaptam</h5>
+                    <p>Hoje em dia a maioria das pessoas acessam a internet pelos seus smartphones, pensando nisso todos nossos projetos são feitos para se adaptar a qualquer tipo de tela. Não importa se seu cliente esteja em um celular de 2010 ou um computador de última geração, ele conseguirá acessar e ver o site.</p>
+                </div>
+                <div class="diferenciais__img">
+                    <svg id="svg-phone" viewBox="0 0 663 604" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <g id="hero-mobile">
+                            <rect id="phone-fundo" opacity="0.8" x="1.10741" y="1.93209" width="301.005" height="546.124" rx="21.317" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 302.555 66.2876)" stroke="url(#paint0_linear_600_469)" stroke-width="3.87582" />
+                            <circle id="phone-circ" opacity="0.8" cx="585.483" cy="162.62" r="76.3537" stroke="url(#paint1_linear_600_469)" stroke-width="2.32549" />
+                            <rect id="phone-starfall2" x="43.7727" y="567.171" width="387.082" height="0.5" rx="0.25" transform="rotate(-90 43.7727 567.171)" stroke="url(#paint2_linear_600_469)" stroke-width="0.5" />
+                            <rect id="phone-starfall1" x="546.08" y="387.333" width="387.082" height="0.5" rx="0.25" transform="rotate(-90 546.08 387.333)" stroke="url(#paint3_linear_600_469)" stroke-width="0.5" />
+                            <g id="phone-tela" filter="url(#filter0_d_600_469)">
+                                <rect width="310" height="550" rx="23.2549" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 273.955 19.077)" fill="#FAF8F5" />
+                            </g>
+                            <g id="elementos">
+                                <rect id="phone-desc2" width="62.0131" height="11.6275" rx="5.81373" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 315.146 58.2366)" fill="#C3C3C3" />
+                                <rect id="phone-desc1" width="93.0197" height="11.6275" rx="5.81373" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 325.015 37.1793)" fill="#C3C3C3" />
+                                <circle id="phone-ft" r="38.7582" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 247.648 47.6418)" fill="#C3C3C3" />
+                                <rect id="phone-retang" opacity="0.5" width="93" height="191" rx="12.4026" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 314.414 338.198)" fill="url(#paint4_linear_600_469)" />
+                                <rect id="phone-grid5" width="68" height="70" rx="12.4026" transform="matrix(-0.995805 -0.0915016 0.424357 -0.905495 299.66 299.825)" fill="#C8C8C8" fill-opacity="0.5" />
+                                <rect id="phone-grid4" width="120" height="70" rx="12.4026" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 127.144 218.87)" fill="#C8C8C8" fill-opacity="0.5" />
+                                <rect id="phone-grid3" width="80" height="150" rx="12.4026" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 379.189 166.807)" fill="#C8C8C8" fill-opacity="0.5" />
+                                <rect id="phone-grid2" width="120" height="70" rx="12.4026" transform="matrix(-0.995805 -0.0915016 0.424357 -0.905495 332.99 229.928)" fill="#C8C8C8" fill-opacity="0.5" />
+                                <rect id="phone-grid1" width="68" height="70" rx="12.4026" transform="matrix(0.995805 0.0915016 -0.424357 0.905495 160.039 148.679)" fill="#C8C8C8" fill-opacity="0.5" />
+                            </g>
+                        </g>
+                        <defs>
+                            <filter id="filter0_d_600_469" x="48.405" y="21.0961" width="586.402" height="582.349" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dx="30" dy="30" />
+                                <feGaussianBlur stdDeviation="15" />
+                                <feComposite in2="hardAlpha" operator="out" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.2 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_600_469" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_600_469" result="shape" />
+                            </filter>
+                            <filter id="filter1_d_600_469" x="93.8726" y="4.61335" width="391.802" height="545.397" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha" />
+                                <feOffset dx="11.6275" dy="11.6275" />
+                                <feGaussianBlur stdDeviation="9.68955" />
+                                <feComposite in2="hardAlpha" operator="out" />
+                                <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.15 0" />
+                                <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_600_469" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_600_469" result="shape" />
+                            </filter>
+                            <filter id="filter2_b_600_469" x="229.929" y="225.094" width="101.452" height="79.8558" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feGaussianBlur in="BackgroundImage" stdDeviation="3.10066" />
+                                <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_600_469" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_600_469" result="shape" />
+                            </filter>
+                            <filter id="filter3_b_600_469" x="95.423" y="213.745" width="153.234" height="84.6138" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feGaussianBlur in="BackgroundImage" stdDeviation="3.10066" />
+                                <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_600_469" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_600_469" result="shape" />
+                            </filter>
+                            <filter id="filter4_b_600_469" x="313.519" y="161.683" width="147.351" height="153.393" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feGaussianBlur in="BackgroundImage" stdDeviation="3.10066" />
+                                <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_600_469" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_600_469" result="shape" />
+                            </filter>
+                            <filter id="filter5_b_600_469" x="211.477" y="150.438" width="153.234" height="84.6138" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feGaussianBlur in="BackgroundImage" stdDeviation="3.10066" />
+                                <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_600_469" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_600_469" result="shape" />
+                            </filter>
+                            <filter id="filter6_b_600_469" x="128.317" y="143.555" width="101.452" height="79.8558" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
+                                <feFlood flood-opacity="0" result="BackgroundImageFix" />
+                                <feGaussianBlur in="BackgroundImage" stdDeviation="3.10066" />
+                                <feComposite in2="SourceAlpha" operator="in" result="effect1_backgroundBlur_600_469" />
+                                <feBlend mode="normal" in="SourceGraphic" in2="effect1_backgroundBlur_600_469" result="shape" />
+                            </filter>
+                            <linearGradient id="paint0_linear_600_469" x1="783.376" y1="909.789" x2="290.862" y2="-31.0846" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#7B8DE2" />
+                                <stop offset="1" stop-color="#7B8DE2" stop-opacity="0" />
+                            </linearGradient>
+                            <linearGradient id="paint1_linear_600_469" x1="906.316" y1="341.553" x2="815.886" y2="29.9095" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#7B8DE2" />
+                                <stop offset="1" stop-color="#7B8DE2" stop-opacity="0" />
+                            </linearGradient>
+                            <linearGradient id="paint2_linear_600_469" x1="43.5227" y1="567.905" x2="431.105" y2="567.904" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#A48FF5" />
+                                <stop offset="0.421875" stop-color="#F3A38D" />
+                                <stop offset="0.869792" stop-color="#F3A38D" stop-opacity="0" />
+                            </linearGradient>
+                            <linearGradient id="paint3_linear_600_469" x1="545.83" y1="388.067" x2="933.412" y2="388.066" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#A48FF5" />
+                                <stop offset="0.421875" stop-color="#F3A38D" />
+                                <stop offset="0.869792" stop-color="#F3A38D" stop-opacity="0" />
+                            </linearGradient>
+                            <linearGradient id="paint4_linear_600_469" x1="46.5099" y1="0" x2="46.5099" y2="191.466" gradientUnits="userSpaceOnUse">
+                                <stop stop-color="#7F62F4" />
+                                <stop offset="1" stop-color="#BC44F4" />
+                            </linearGradient>
+                        </defs>
+                    </svg>
+
+                </div>
+            </div>
+            <div id="diferenciais__codigo" class="diferenciais__item">
+                <div class="diferenciais__img">
+                    <img src="./assets/img/icon/svgs/anim-code.svg" alt="">
+                </div>
+                <div class="diferenciais__txt">
+                    <span>Codificação</span>
+                    <h5>Códigos Originais</h5>
+                    <p>Desde o processo de desenho do site, criamos algo que atenda perfeitamente a necessidade do cliente, então não utilizamos nenhum modelo pronto de site. Além de não utilizar nenhum builder como Wordpress/Wix entre outros.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- <section id="step" class="step container">
             <div class="sec__tit">
                 <h2>Ainda está confuso?</h2>
                 <p>sem problemas, a gente desenha (=</p>
@@ -248,7 +368,7 @@
                     <img src="./assets/img/fake.png" alt="">
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <article id="numeros" class="num">
             <div class="num__grid container">
