--- a/entry.html
+++ b/entry.html
@@ -52,6 +52,9 @@
       </svg>
     </div>
   </div>
+  <script src="./script.js"></script>
+  <script src="./swiper.js"></script>
+
 </body>
 
 </html>
