--- a/projetos/bortoluzzi.html
+++ b/projetos/bortoluzzi.html
@@ -5,25 +5,24 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./assets/css/secoes/404.css">
+  <link rel="stylesheet" href="./../assets/css/style.css">
 
   <!-- Favicon -->
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./../favicon.ico" type="image/x-icon">
 
   <!-- Descrição -->
-  <meta name="description" content="Construímos produtos intuitivos que atendem às necessidades dos usuários. Projetamos do 0, não utilizamos layouts prontos, cada produto é único e completo">
+  <meta name="description" content="Projeto desenvolvido para a advogada Gabriela Bortoluzzi. Uma profissional séria, humana e competente. Agência Solary.">
 
   <!-- Fontes usadas -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Erro 404</title>
+  <title>Bortoluzzi Advocacia</title>
 </head>
 
 <body>
-  <p class="erro-tit">ERRO 404</p>
-  <p class="erro-desc">Essa página não existe. Recomendamos você voltar para o início do site</p>
-  <a href="index.html">Voltar ao início</a>
+
+
 </body>
 
 </html>
