--- a/projetos/solary.html
+++ b/projetos/solary.html
@@ -32,7 +32,7 @@
         </a>
       </div>
       <div class="header-logo">
-        <a href="#">
+        <a href="./../index.html">
           <img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></a>
       </div>
       <div class="header-right">
@@ -46,9 +46,9 @@
     </div>
   </header>
 
-  <main class="container" id="projeto-base">
-    <article class="proj">
-      <div class="proj-capa">
+  <main id="projeto-base">
+    <article class="proj-capa container">
+      <div class="proj-tit">
         <h2>Metodologia. Inovação. Agilidade. Competência.</h2>
         <div class="proj-capa-infos">
           <div class="proj-info">
@@ -65,9 +65,48 @@
           </div>
         </div>
       </div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-bortoluzzi1.svg" alt="Mockup do site"></div>
+    </article>
+
+    <div class="bg-proj-about">
+      <article class="proj-about container">
+        <div class="proj-about-tit">
+          <h2>Sobre o Projeto</h2>
+          <div class="proj-about-desc">
+            <h3>Segurança, confiança e conforto para um momento complicado da vida.</h3>
+            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva. Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.</p>
+          </div>
+        </div>
+      </article>
+    </div>
+    <div class="bg-proj-mockup">
+      <article class="proj-mockup container">
+        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+      </article>
+    </div>
+
+    <article class="proj-quote container">
+      <h1>Para o <span>sucesso</span> de sua estratégia digital é necessário ter um site que represente sua marca.</h1>
+    </article>
+
+    <article class="proj-mockup2 container">
+      <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
     </article>
   </main>
 
+  <footer class="container">
+    <div class="footer-logo"><img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></div>
+    <div class="footer-dados">
+      <a href="mailto:ola@agenciasolary.com.br" class="footer-email">ola@agenciasolary.com.br</a>
+      <div class="footer-social">
+        <a href="#"> <img src="./../assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
+        <a href="#"> <img src="./../assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
+        <a href="#"> <img src="./../assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
+      </div>
+      <p class="footer-cnpj">CNPJ: 47.409.055/0001-13</p>
+    </div>
+  </footer>
 </body>
 
 </html>
