--- a/projetos/bortoluzzi.html
+++ b/projetos/bortoluzzi.html
@@ -11,18 +11,114 @@
   <link rel="shortcut icon" href="./../favicon.ico" type="image/x-icon">
 
   <!-- Descrição -->
-  <meta name="description" content="Projeto desenvolvido para a advogada Gabriela Bortoluzzi. Uma profissional séria, humana e competente. Agência Solary.">
+  <meta name="description" content="Agência focada em desenvolver soluções otimizadas em websites e também Identidade Visual. Confie no processo.">
 
   <!-- Fontes usadas -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Mukta:wght@400;700&family=Poppins:wght@300;700&family=Saira:wght@300;500;700&display=swap" rel="stylesheet">
-  <title>Bortoluzzi Advocacia</title>
+  <title>Agência Solary</title>
 </head>
 
 <body>
+  <header class="container">
+    <div class="header-bloco">
+      <div class="header-left">
+        <a href="#metodologia">
+          <p class="header-1"> metodologia</p>
+        </a>
+        <a href="#diferenciais">
+          <p class="header-2">diferenciais</p>
+        </a>
+      </div>
+      <div class="header-logo">
+        <a href="./../index.html">
+          <img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></a>
+      </div>
+      <div class="header-right">
+        <a href="#formulario">
+          <p class="header-3">formulario</p>
+        </a>
+        <a href="#contato">
+          <p class="header-4">contato</p>
+        </a>
+      </div>
+    </div>
+  </header>
 
+  <main id="projeto-base">
+    <article class="proj-capa container">
+      <div class="proj-tit">
+        <h2>Metodologia. Inovação. Agilidade. Competência.</h2>
+        <div class="proj-capa-infos">
+          <div class="proj-info">
+            <span>Cliente</span>
+            <p>Agência Solary</p>
+          </div>
+          <div class="proj-info">
+            <span>Ano</span>
+            <p>2022</p>
+          </div>
+          <div class="proj-info">
+            <span>O que fizemos</span>
+            <p>Website & Identidade Visual</p>
+          </div>
+        </div>
+      </div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-bortoluzzi1.svg" alt="Mockup do site"></div>
+    </article>
 
+    <div class="bg-proj-about">
+      <article class="proj-about container">
+        <div class="proj-about-tit">
+          <h2>Sobre o Projeto</h2>
+          <div class="proj-about-desc">
+            <h3>Segurança, confiança e conforto para um momento complicado da vida.</h3>
+            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva.
+              <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
+            </p>
+            <a class="proj-about-link" href="https://bortoluzziadvocacia.com.br">veja o site completo aqui</a>
+          </div>
+        </div>
+      </article>
+    </div>
+
+    <div class="bg-proj-mockup">
+      <article class="proj-mockup container">
+        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+        <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+      </article>
+    </div>
+
+    <article class="proj-quote container">
+      <h1>Para o <span>sucesso</span> de sua estratégia digital é necessário ter um site que represente sua marca.</h1>
+    </article>
+
+    <article class="proj-mockup2 container">
+      <img src="./../assets/img/projetos/mockup-bortoluzzi3.png" alt="Mockup de celulares">
+    </article>
+
+    <article class="proj-next container">
+      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+          próximo
+        </span>
+        <span class="proj-next-nome"> Bortoluzzi Advocacia</span>
+      </a>
+    </article>
+  </main>
+
+  <footer class="container">
+    <div class="footer-logo"><img src="./../assets/img/icon/log.svg" alt="Ícone Solary"></div>
+    <div class="footer-dados">
+      <a href="mailto:ola@agenciasolary.com.br" class="footer-email">ola@agenciasolary.com.br</a>
+      <div class="footer-social">
+        <a href="https://wa.me/53999902079"> <img src="./../assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
+        <a href="https://www.instagram.com/agenciasolary/"> <img src="./../assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
+        <a href="https://www.behance.net/agenciasolary"> <img src="./../assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
+      </div>
+      <p class="footer-cnpj">CNPJ: 47.409.055/0001-13</p>
+    </div>
+  </footer>
 </body>
 
 </html>
