--- a/projetos/solary.html
+++ b/projetos/solary.html
@@ -74,11 +74,15 @@
           <h2>Sobre o Projeto</h2>
           <div class="proj-about-desc">
             <h3>Segurança, confiança e conforto para um momento complicado da vida.</h3>
-            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva. Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.</p>
+            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva.
+              <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
+            </p>
+            <a class="proj-about-link" href="https://bortoluzziadvocacia.com.br">veja o site completo aqui</a>
           </div>
         </div>
       </article>
     </div>
+
     <div class="bg-proj-mockup">
       <article class="proj-mockup container">
         <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
@@ -91,7 +95,15 @@
     </article>
 
     <article class="proj-mockup2 container">
-      <img src="./../assets/img/bortoluzzi.webp" alt="Mockup de celulares">
+      <img src="./../assets/img/projetos/mockup-bortoluzzi3.png" alt="Mockup de celulares">
+    </article>
+
+    <article class="proj-next container">
+      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+          próximo
+        </span>
+        <span class="proj-next-nome"> Bortoluzzi Advocacia</span>
+      </a>
     </article>
   </main>
 
@@ -100,9 +112,9 @@
     <div class="footer-dados">
       <a href="mailto:ola@agenciasolary.com.br" class="footer-email">ola@agenciasolary.com.br</a>
       <div class="footer-social">
-        <a href="#"> <img src="./../assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
-        <a href="#"> <img src="./../assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
-        <a href="#"> <img src="./../assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
+        <a href="https://wa.me/53999902079"> <img src="./../assets/img/icon/svgs/soc-zap.svg" alt="Whatsapp da Solary"></a>
+        <a href="https://www.instagram.com/agenciasolary/"> <img src="./../assets/img/icon/svgs/soc-ig.svg" alt="Instagram da Solary"></a>
+        <a href="https://www.behance.net/agenciasolary"> <img src="./../assets/img/icon/svgs/soc-be.svg" alt="Behance da Solary" id="behance"></a>
       </div>
       <p class="footer-cnpj">CNPJ: 47.409.055/0001-13</p>
     </div>
