fim secao projeto

--- a/index.html
+++ b/index.html
@@ -395,7 +395,7 @@
                 </div>
                 <div class="port-grid">
                     <div class="port-item1">
-                        <a href="./projetos/solary.html">
+                        <a href="./projetos/pain.html">
                             <img src="./assets/img/paiN.webp" alt="Projeto paiN Gaming">
                             <div class="port-txt">
                                 <h6>paiN 2015</h6>
@@ -404,7 +404,7 @@
                         </a>
                     </div>
                     <div class="port-item2">
-                        <a href="https://bortoluzziadvocacia.com.br/">
+                        <a href="./projetos/bortoluzzi.html">
                             <img src="./assets/img/bortoluzzi.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
                                 <h6>Bortoluzzi Advocacia</h6>
@@ -414,7 +414,7 @@
                     </div>
 
                     <div class="port-item3">
-                        <a href="https://flaviomaciel.com.br/">
+                        <a href="./projetos/flavio-maciel.html">
                             <img src="./assets/img/flavioadv.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
                                 <h6>Escritório Flavio Maciel</h6>
@@ -423,7 +423,7 @@
                         </a>
                     </div>
                     <div class="port-item4">
-                        <a href="https://fluicoffee.com/">
+                        <a href="./projetos/fluicoffee.html">
                             <img src="./assets/img/flui.webp" alt="Projeto Bortoluzzi Advocacia">
                             <div class="port-txt">
                                 <h6>Fluicoffee</h6>
