--- a/projetos/bortoluzzi.html
+++ b/projetos/bortoluzzi.html
@@ -99,10 +99,10 @@
     </article>
 
     <article class="proj-next container">
-      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+      <a class="proj-next-link" href="./flavio-maciel.html"><span>
           próximo
         </span>
-        <span class="proj-next-nome"> Bortoluzzi Advocacia</span>
+        <span class="proj-next-nome">Flavio Maciel</span>
       </a>
     </article>
   </main>
