--- a/projetos/solary.html
+++ b/projetos/solary.html
@@ -65,7 +65,7 @@
           </div>
         </div>
       </div>
-      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-bortoluzzi1.svg" alt="Mockup do site"></div>
+      <div class="proj-capa-img"><img src="./../assets/img/projetos/mockup-solary.svg" alt="Mockup do site"></div>
     </article>
 
     <div class="bg-proj-about">
@@ -73,8 +73,8 @@
         <div class="proj-about-tit">
           <h2>Sobre o Projeto</h2>
           <div class="proj-about-desc">
-            <h3>Segurança, confiança e conforto para um momento complicado da vida.</h3>
-            <p>O escritório de Bortoluzzi Advocacia é uma empresa que é focada na advocacia familiar, Gabriela mora em Caxias do Sul - RS, entretanto atende clientes do país todo, nas conversas iniciais ficou claro que ela desejava um site leve, sem atributos agressivos ao usuário, como por exemplo um botão flutuante ou aquelas - chatas - caixas de pop-up que atrapalham a navegação. Pensando nisso, criamos um site com longos “respiros” em um tom de branco para que a experiência do usuário seja mais agradável e intuitiva.
+            <h3>Produtos envolventes & Serviço único</h3>
+            <p>O pilar da Solary, enquanto agência, é desenvolver soluções funcionais para nossos clientes, queremos que eles tenham um produto de qualidade, seu usuário deve facilmente aprender como usar e reaprender ao longo do tempo.
               <br><br> Gabriela além de ser apaixonada por advogar também ama escrever, então percebemos a necessidade de um blog, onde fosse possível ela estar sempre atualizando e informando seus clientes. O layout do blog foi inspirado no famoso site de textos, Medium, referência em boa experiência ao usuário quando o assunto é leitura em telas.
             </p>
             <a class="proj-about-link" href="https://bortoluzziadvocacia.com.br">veja o site completo aqui</a>
@@ -99,10 +99,10 @@
     </article>
 
     <article class="proj-next container">
-      <a class="proj-next-link" href="./bortoluzzi.html"><span>
+      <a class="proj-next-link" href="./fluicoffee.html"><span>
           próximo
         </span>
-        <span class="proj-next-nome"> Bortoluzzi Advocacia</span>
+        <span class="proj-next-nome">Fluicoffee</span>
       </a>
     </article>
   </main>
